# Code2Prompt-CLI

./: README.md  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/code2prompt_cli/: __init__.py  main.py
tests/: test_cli.py  test_cli_options.py  test_integration.py
