[project]
name = "code2prompt-cli"
version = "0.1.0"
description = "A CLI tool to generate LLM prompts from codebase context using code2prompt"
readme = "README.md"
authors = [
    { name = "Marcin Morys", email = "marcin.m.morys@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "code2prompt-rs>=3.2.1",
    "click>=8.1.0",
    "pyperclip>=1.8.0",
    "GitPython>=3.1.0",
    "Jinja2>=3.1.0",
]

[project.scripts]
code2prompt-cli = "code2prompt_cli.main:main"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
